--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,4 +1,6 @@
 [deps]
-ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 DifferentiableFrankWolfe = "b383313e-5450-4164-a800-befbd27b574d"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+FrankWolfe = "f55ce6ea-fdc5-4628-88c5-0087fe54bd30"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
