--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ChainRulesCore = "1.15"
 FrankWolfe = "0.3"
 ImplicitDifferentiation = "0.5"
+LinearAlgebra = "1"
 julia = "1.6"
 
 [extras]
