--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
 ChainRulesCore = "1.15"
-FrankWolfe = "0.3, 0.4"
+FrankWolfe = "0.3, 0.4, 0.5"
 ImplicitDifferentiation = "0.7"
 LinearAlgebra = "1"
 julia = "1.10"
