--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 [compat]
 ChainRulesCore = "1.15"
 FrankWolfe = "0.3, 0.4, 0.5"
-ImplicitDifferentiation = "0.7"
+ImplicitDifferentiation = "0.8"
 LinearAlgebra = "1"
 julia = "1.10"
 
@@ -28,7 +28,24 @@ JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["Aqua", "ChainRulesCore", "Documenter", "ForwardDiff", "FrankWolfe", "ImplicitDifferentiation", "JET", "JuliaFormatter", "Random", "Statistics", "Test", "Zygote"]
+test = [
+    "Aqua",
+    "ChainRulesCore",
+    "Documenter",
+    "ForwardDiff",
+    "FrankWolfe",
+    "ImplicitDifferentiation",
+    "JET",
+    "JuliaFormatter",
+    "Random",
+    "Statistics",
+    "Test",
+    "TestItems",
+    "TestItemRunner",
+    "Zygote",
+]
